--- a/wwwroot/css/style.css
+++ b/wwwroot/css/style.css
@@ -2,13 +2,17 @@ table {
     max-width: 100%;
 }
 
-table,th,td {
+table,
+th,
+td {
     padding: 10px;
     min-width: 60px;
     border: 2px solid #dddddd;
 }
 
-table,tbody,td {
+table,
+tbody,
+td {
     padding: 10px;
     min-width: 60px;
     border: 2px solid #dddddd;
